--- a/src/Formplot.csproj
+++ b/src/Formplot.csproj
@@ -53,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\EnumParser.cs" />
+    <Compile Include="FileFormat\Defect.cs" />
+    <Compile Include="FileFormat\DefectPlot.cs" />
     <Compile Include="FileFormat\EmptyPlot.cs" />
     <Compile Include="FileFormat\FormplotExtensions.cs" />
     <Compile Include="FileFormat\FourierPlot.cs" />
