feat: Adds NuGet package 2.0.0

--- a/src/Tests/Formplot.Tests.csproj
+++ b/src/Tests/Formplot.Tests.csproj
@@ -26,4 +26,8 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <IsPackable>false</IsPackable>
+  </PropertyGroup>
+  
 </Project>
