fix: Test data directory and copying

--- a/src/Tests/Formplot.Tests.csproj
+++ b/src/Tests/Formplot.Tests.csproj
@@ -29,5 +29,10 @@
   <PropertyGroup>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content CopyToOutputDirectory="PreserveNewest" Include="TestData\prpx\*.prpx" />
+    <Content CopyToOutputDirectory="PreserveNewest" Include="TestData\pltx\*.pltx" />
+  </ItemGroup>
   
 </Project>
