--- a/src/Tests/Formplot.Tests.csproj
+++ b/src/Tests/Formplot.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
     <LangVersion>9.0</LangVersion>
-    <AssemblyName>PiWeb.Formplot.Tests</AssemblyName>
+    <AssemblyName>Zeiss.PiWeb.Formplot.Tests</AssemblyName>
     <RootNamespace>Zeiss.PiWeb.Formplot.Tests</RootNamespace>
     <Copyright>Copyright © $([System.DateTime]::UtcNow.Year) Carl Zeiss Industrielle Messtechnik GmbH</Copyright>
     <Company>Carl Zeiss Industrielle Messtechnik GmbH</Company>
@@ -35,5 +35,5 @@
     <Content CopyToOutputDirectory="PreserveNewest" Include="TestData\prpx\*.prpx" />
     <Content CopyToOutputDirectory="PreserveNewest" Include="TestData\pltx\*.pltx" />
   </ItemGroup>
-  
+
 </Project>
