--- a/.github/workflows/feature-branch.yml
+++ b/.github/workflows/feature-branch.yml
@@ -1,14 +1,18 @@
-# Workflow to build and publish feature/fix branches
+# Calls a workflow that
+# + builds and tests the chosen branch,
+# + packs an alpha NuGet package
+# + and stores the package as artifact.
+#
+# This workflow must be triggered manually.
 
-name: Build on feature/fix branch
+name: Build, test & pack beta on fix or feature branch
 
-# Run on manual trigger only
 on:
   workflow_dispatch:
 
 jobs:
   publish-feature-branch:
-    uses: ZEISS-PiWeb/github-actions/.github/workflows/feature-branch.yml@main
+    uses: ZEISS-PiWeb/github-actions/.github/workflows/feature-branch.yml@1.1.0
     with:
       do_pack: true  
     secrets: inherit
