--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   release:
-    uses: ZEISS-PiWeb/github-actions/.github/workflows/create-release.yml@1.1.0
+    uses: ZEISS-PiWeb/github-actions/.github/workflows/create-release.yml@main
     with:
       generate_release_notes: true
     secrets: inherit
