--- a/.github/workflows/create-support-release.yml
+++ b/.github/workflows/create-support-release.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   release:
-    uses: ZEISS-PiWeb/github-actions/.github/workflows/create-support-release.yml@1.1.0
+    uses: ZEISS-PiWeb/github-actions/.github/workflows/create-support-release.yml@main
     with:
       generate_release_notes: true
     secrets: inherit
