--- a/.github/workflows/feature-branch.yml
+++ b/.github/workflows/feature-branch.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   publish-feature-branch:
-    uses: ZEISS-PiWeb/github-actions/.github/workflows/feature-branch.yml@1.1.0
+    uses: ZEISS-PiWeb/github-actions/.github/workflows/feature-branch.yml@main
     with:
       do_pack: true  
     secrets: inherit
