feat: Updates PiWeb logo

--- a/src/Formplot/Formplot.csproj
+++ b/src/Formplot/Formplot.csproj
@@ -43,7 +43,7 @@
 
   <ItemGroup>
     <None Include="..\..\LICENSE.txt" Pack="true" PackagePath="LICENSE.txt" />
-    <None Include="..\..\docs\gfx\logo_128x128.png" Pack="true" PackagePath="logo_128x128.png" />
+    <None Include="..\..\docs\img\logo_128x128.png" Pack="true" PackagePath="logo_128x128.png" />
   </ItemGroup>
 
   <ItemGroup>
